<resources>
    <string name="app_name">Supter</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="new_to_supter">New to Supter?</string>
    <string name="join_now">Join now</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="add_purchase">Add purchase</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="stage">Stage</string>
    <string name="real_period">Real period</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="save_changes">Save changes</string>
    <string name="how_would_the_purchase_be_useful">How would the purchase be useful?</string>
    <string name="income_remainder">Income remainder</string>
    <string name="period">Period</string>
    <string name="balance">Balance</string>
    <string name="hint_income_remainder">Money that can be spend on your wishes every period</string>
    <string name="hint_period">Income frequency (days)</string>
    <string name="hint_balance">Available money for spending on wishes</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="dark_theme">Dark theme:</string>
    <string name="info">Info</string>
    <string name="to_increase_potential">To increase potential</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="purchase_card_transition_name">purchase_detail_%1$s</string>
    <string name="purchase_card_detail_transition_name">purchase_card_detail</string>
    <string name="date_of_salary_coming">Date of salary coming:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="zero_hours">0 hours</string>
    <string name="hours">%s hours</string>
    <string name="edit">Edit</string>
    <string name="answer">Answer</string>
    <string name="some_fields_are_empty">Some fields are empty</string>
    <string name="well_done">Well done!</string>
    <string name="answer_some_questions">Answer some questions</string>
    <string name="answer_cant_be_blank">Answer can\'t be blank</string>
    <string name="answer_was_submitted_successfully">Answer was submitted successfully</string>
    <string name="ok">OK</string>
    <string name="fill_account">Fill account</string>
    <string name="financial_situation_to_make_calculations">We need to know some info about your financial situation to make calculations</string>
    <string name="potential_less_70">Potential of %s &lt; 70</string> <!-- &lt; == '<' -->
    <string name="link"><u>Link</u></string>
    <string name="link_is_empty">Link is empty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="available_in">Available in</string>
    <string name="thinking_time">Thinking time</string>
    <string name="availability_time">Availability time</string>
    <string name="available">Available</string>
    <string name="base_url">https://supter-api.demyan.net/</string>
    <string name="are_you_sure_to_delete">Are you sure to delete %s ?</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="paste">Paste</string>
    <string name="potential">Potential</string>
    <string name="notification_title">"Add income reminder to your balance "</string>
    <string name="notification_subtitle">Do you want to add income reminder to your balance?</string>
    <string name="are_notifications_enabled">Are notifications enabled?</string>
    <string name="choose_purchase_image">Choose purchase image</string>
    <string name="purchase_creating">Purchase creating</string>
    <string name="retry">Retry</string>
    <string name="balance_with_value">Balance: %s</string>

    <string-array name="photo_options">
        <item>Take photo</item>
        <item>Choose from Gallery</item>
        <item>Paste</item>
        <item>Cancel</item>
    </string-array>

</resources>