<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="?attr/windowBackground"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:text="@string/sign_in"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="20sp" />

    <LinearLayout
        android:background="@drawable/sign_in_background"
        android:id="@+id/edit_text_container"
        android:layout_below="@+id/sign_up_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <EditText
            android:autofillHints="Enter your email"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:id="@+id/email"
            android:imeActionLabel="@string/email"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minWidth="300dp"
            android:padding="15dp"
            android:textColor="?android:attr/textColorSecondary"
            android:textColorHint="?android:attr/textColorSecondary" />

        <include layout="@layout/line" />

        <EditText
            android:autofillHints="Enter your email"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minWidth="200dp"
            android:padding="15dp"
            android:textColor="?android:attr/textColorSecondary"
            android:textColorHint="?android:attr/textColorSecondary" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/edit_text_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:background="?attr/primaryElementColor"
            android:id="@+id/sign_in_btn"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/sign_up_btn"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:text="@string/new_to_supter"
                android:textColor="?android:attr/textColorHint"
                android:textSize="16sp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/join_now"
                android:textColor="@color/btnColoLight"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
