<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/how_would_the_purchase_be_useful" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/question_answer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBetweenBigViews"
        android:hint="@string/answer"
        app:layout_constraintTop_toBottomOf="@+id/question_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/cancel"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_answer" />

<!--    <Button-->
<!--        android:id="@+id/submit"-->
<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:text="@string/submit"-->
<!--        android:textColor="?android:textColorPrimary"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/question_answer"-->
<!--        app:strokeColor="?android:textColorPrimary" />-->

    <com.supter.views.LoadingButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_answer"
        app:lb_btnColor="?attr/colorPrimary"
        app:lb_btnDisabledColor="?attr/colorPrimary"
        app:lb_btnRippleColor="@color/white"
        app:lb_btnText="@string/submit"
        app:lb_disabledTextColor="@color/white"
        app:lb_resetAfterFailed="true" />

</androidx.constraintlayout.widget.ConstraintLayout>