<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">

    <RelativeLayout
        android:id="@+id/signUpParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_up"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/edit_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_text"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/sign_in_background"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter your email"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:imeActionLabel="@string/email"
                android:inputType="textEmailAddress"
                android:minWidth="300dp"
                android:padding="15dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textColorHint="?android:attr/textColorSecondary" />

            <include layout="@layout/line" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter your email"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minWidth="200dp"
                android:padding="15dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textColorHint="?android:attr/textColorSecondary" />

            <include layout="@layout/line" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter your email"
                android:background="@android:color/transparent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minWidth="200dp"
                android:padding="15dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textColorHint="?android:attr/textColorSecondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_container"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up"
                style="@style/AuthButton" />

        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
